--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+    "ConnectionStrings": {
+      "CustomerPlatformContextConnection": "Server=tcp:customerplatformdbserver.database.windows.net,1433;Initial Catalog=customerportal;Persist Security Info=False;User ID=Admin!1;Password=Code!Cuivre;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    },
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -13,4 +10,3 @@
   }
 
 
-}
