--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CustomerPlatformContextConnection": "Server=(local)\\sqlexpress;Database=customer_platform;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "InterventionsContext": "Server=(localdb)\\mssqllocaldb;Database=InterventionsContext-bb193498-ae22-430a-b8e8-8b291778a7c1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CustomerPlatformContextConnection": "Server=tcp:customerplatformdbserver.database.windows.net,1433;Initial Catalog=customerportal;Persist Security Info=False;User ID=Admin!1;Password=Code!Cuivre;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+ "Logging": {
+  "LogLevel": {
+    "Default": "Information",
+    "Microsoft": "Warning",
+    "Microsoft.Hosting.Lifetime": "Information"
   }
-
-
+},
+"AllowedHosts": "*"
 }
+
+
